# vault-cli

./: .gitignore  LICENSE  README.md
.claude/skills/vault-cli/: SKILL.md
vault-cli/: README.md  pyproject.toml
vault-cli/vault/: __init__.py  cli.py  config.py  fetcher.py  indexer.py  ingestor.py
